tests/ui/rfc-2632-const-trait-impl/issue-102156.stderr
error[E0433]: failed to resolve: maybe a missing crate `core`?
  --> $DIR/issue-102156.rs:4:5
   |
LL | use core::convert::{From, TryFrom};
   |     ^^^^ maybe a missing crate `core`?
   |
   = help: consider adding `extern crate core` to use the `core` crate

error[E0433]: failed to resolve: maybe a missing crate `core`?
  --> $DIR/issue-102156.rs:4:5
   |
LL | use core::convert::{From, TryFrom};
   |     ^^^^ maybe a missing crate `core`?
   |
   = help: consider adding `extern crate core` to use the `core` crate

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
